fix accesibility contrast

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,3 +1,4 @@
+/* styles for all elements */
 * {
     margin: 0;
     padding: 0;
@@ -5,9 +6,10 @@
     box-sizing: border-box;
 }
 
+/* General body styling */
 body {
     font-family: "Noto Sans Mono", sans-serif;
-    color: #212529;
+    color: #d6c7d6;
     background: #564471 !important; 
     background-size: cover; 
     display: flex;
@@ -16,21 +18,28 @@ body {
     min-height: 100vh;
 }
 
+/* Heading styles */
+h1, h2 {
+    color: #d6c7f4;
+    text-align: center;
+}
+
 h1 {
     font-size: 1.8rem;
     margin-bottom: 0.1rem;
-    color: #d6c7f4;
-    text-align: center;
 }
 
 h2 {
     font-size: 1.3rem;
     margin-bottom: 0.1rem;
-    color: #d6c7f4;
-    text-align: center;
     padding: 0.3rem;
 }
 
+h3 {
+    color: #d6c7f4;
+}
+
+/* Link styling */
 a {
     color: #212529;
 }
@@ -40,6 +49,7 @@ a {
     color:#d6c7f4
 }
 
+/* Paragraph styling */
 p {
     font-size: 1.2rem;
     margin-bottom: 1rem;
@@ -48,6 +58,7 @@ p {
     text-decoration: none;
 }
 
+/* Navigation styling */
 nav {
     display: flex;
     justify-content: space-between;
@@ -58,11 +69,13 @@ nav {
     border-radius: 0 0 40px 40px;
 }
 
+/* Logo styling */
 .logo {
     height: 3rem;
     width: 12.5rem;
 }
 
+/* Footer styling */
 footer {
     display: flex;
     justify-content: space-between;
@@ -75,6 +88,7 @@ footer {
     width: 100%;
 }
 
+/* Header section styling */
 .head-section {
     display: flex;
     justify-content: center;
@@ -82,6 +96,7 @@ footer {
     color: #fff;
 }
 
+/* Form styling */
 .form-body {
     width: 100%;
     max-width: 400px;
@@ -104,47 +119,9 @@ footer {
     padding-bottom: 3rem;
 }
 
+/* Button styling */
 .btn {
     margin: 0.2rem;
-}
-
-.to-do-section {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid #d6c7f4;
-    border-radius: 20px;
-    margin: 5px;
-}
-
-.to-do-title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.to-do-title a {
-    text-decoration: none;
-    color: #d6c7f4;
-}
-
-.task-priority {
-    width: 60px;
-}
-
-.delete-button {
-    text-decoration: none;
-    line-height: 0;
-}
-
-#add-link {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-decoration: none;
-    color: green;
-    font-size: 2rem;
-    text-shadow: 1px 1px 1px black;
 }
 
 .button {
@@ -155,6 +132,15 @@ footer {
     padding: 0.5rem;
     margin: 0.5rem;
     cursor: pointer;
+}
+
+.task-priority {
+    width: 60px;
+}
+
+.delete-button {
+    text-decoration: none;
+    line-height: 0;
 }
 
 input[type="text"],
@@ -225,7 +211,7 @@ select:focus {
 }
 
 strong {
-    color: black;
+    color: #fafafa;
 }
 
 label {
